--- a/CapMem/res/values/strings.xml
+++ b/CapMem/res/values/strings.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">CapMem</string>
     <string name="action_settings">Configurações</string>
     <string name="progresso">Progresso</string>
     <string name="parabens">Parabéns!</string>
     <string name="voce_tem">Você tem uma boa memória!</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_atividade_sobre">Sobre</string>
+
 </resources>
